@@ -31,6 +31,7 @@ module Config
 
 v_fast = []
 v_others = []
+vars = {}
 has_version = false
 File.foreach "config.status" do |line|
   next if /^#/ =~ line
@@ -44,8 +45,10 @@ File.foreach "config.status" do |line|
     next if /^(INSTALL|DEFS|configure_input|srcdir|top_srcdir)$/ =~ name
     next if $install_name and /^RUBY_INSTALL_NAME$/ =~ name
     next if $so_name and /^RUBY_SO_NAME$/ =~  name
-    v = "  CONFIG[\"" + name + "\"] = " +
+    v = "  CONFIG[\"" + name + "\"] #{vars[name] ? '<<' : ''}= " +
+      (vars[name] ? '"\n" ' : '') +
       val.gsub(/\$(?:\$|\{?(\w+)\}?)/) {$1 ? "$(#{$1})" : $&}.dump + "\n"
+    vars[name] = true
     if fast[name]
       v_fast << v
     else
